@@ -7,6 +7,7 @@ Version 0.2 (unreleased)
 ------------------------
 
 * Add ``aafig_default_options`` configuration option.
+* Fix SVG output for HTML writer (this need aafigure r5978 or later).
 
 
 Version 0.1 (2009-06-05)
